@@ -1,3 +1,9 @@
+2009-01-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* decl.c (gnat_to_gnu_entity) <E_Record_Subtype>: Put the _Tag field
+	before any discriminants in the field list.
+	(components_to_record): Remove obsolete comment.
+
 2008-12-04  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline:
